--- a/Refer(Relatorio).tex
+++ b/Refer(Relatorio).tex
@@ -8,9 +8,9 @@
 
 \addcontentsline{toc}{chapter}{\normalsize Bibliografia}
 
-       \bibitem {elementosdealgebra} \textit{Garcia, Arnaldo.} {\it Elementos de Álgebra}. \textit{Rio de Janeiro. Associação instituto Nacional de Matemática Pura e Aplicada, 2003.}
-       \bibitem {algebralinear} \textit{Lima, Elon Lajes} {\it Álgebra Linear}. \textit{7º Edição. Rio de Janeiro; IMPA, 2008.}
-       \bibitem {algebralinear1} \textit{Halmos, Paul R.} {\it Espaços Vetoriais de Dimensão Finita}. \textit{Tradução [de] Guilherme de la Penha. Rio de Janeiro: Campus, 1978.}
+       \bibitem {AppliedOptimization} \textit{Liqun Qi, Kok Lay Teo, Xiao Qi Yang.} {\it Applied Optimization}. \textit{Springer, Optimization and control with applications. 2005.}
+       % \bibitem {algebralinear} \textit{Lima, Elon Lajes} {\it Álgebra Linear}. \textit{7º Edição. Rio de Janeiro; IMPA, 2008.}
+       % \bibitem {algebralinear1} \textit{Halmos, Paul R.} {\it Espaços Vetoriais de Dimensão Finita}. \textit{Tradução [de] Guilherme de la Penha. Rio de Janeiro: Campus, 1978.}
 
 
        \end{thebibliography}
