--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -255,7 +255,10 @@ insignificantemente mais custosa, e mais precisa. Como vemos no código a seguir
 \textcolor[rgb]{1,0,0}{\section{{Otimização de Funções à Várias Variáveis}}}
 
 \hspace{0.8cm}
-
+%TODO: Diferenciabilidade
+%TODO: Pontos extremos
+%TODO: Jacobiana, Hensiana, uso do polinomio de tailor para duas variaveis
+%TODO: Aproximação usando o limite
 
 
 
