Resolvendo "Aspas Duplas"

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -175,8 +175,8 @@ nossa busca pelos pontos críticos.
 
 Partindo desse pressuposto, é nítido que a derivada de uma função é também uma
 função. Portanto, fica evidente que uma função pode ser derivada
-mais de uma vez, sendo essas derivadas, denominadas de `primeira derivada',
-`segunda derivada' e por ai em diante. De modo que, a segunda derivada é
+mais de uma vez, sendo essas derivadas, denominadas de ``primeira derivada'',
+``segunda derivada'' e por ai em diante. De modo que, a segunda derivada é
 a derivada da primeira derivada. Concluindo-se que dada a função
 \(f(x)\), sua primeira derivada é \(df/dx = p(x)\), e sua segunda derivada
 \(dp/dx = s(x)\).
