--- a/Capitulo2(Relatorio).tex
+++ b/Capitulo2(Relatorio).tex
@@ -5,8 +5,6 @@
 % Capítulo 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% TODO: usar aspas duplas
-
 \chapter{\Large{Métodos Clássicos de Otimização}}\label{chp:2}
 
 
@@ -25,7 +23,7 @@ forma iterativa, repetindo sempre o mesmo processo, atualizando o mesmo valor.
 
 Este método faz uso do recurso de derivação. Existindo uma relação muito
 forte com o ângulo da reta tangente à curva, que é o gráfico da função que
-foi derivada. Ademais, é importante ressaltar a necessidade de um "palpite"
+foi derivada. Ademais, é importante ressaltar a necessidade de um ``palpite''
 inicial, que represente o valor de \textit{x}, para o qual será buscado uma
 estimativa da raiz. E com isso vamos entender como o método funciona.
 
@@ -230,7 +228,7 @@ A qual, pode ser reescrita da seguinte forma:
 
 Sabemos que quem determina a direção da convergência é \(f'(x)\), portanto
 não é completamente necessário o uso de \( \frac{1}{f''(x)} \), que
-tem como principal papel controlar o tamanho do `passo dado' na iteração.
+tem como principal papel controlar o tamanho do ``passo dado'' na iteração.
 De modo que, a maioria dos Métodos Quasi-Newton fazem a substituição
 da dada fração por aproximações boas o suficiente. E com isso, levando em
 conta $\alpha$ como a representação dessa aproximação, temos:
@@ -279,7 +277,7 @@ passo:
 
 Simplesmente considerando \(\alpha\) fixo e pequeno pode funcionar,
 mas não seguramente para qualquer situação. Como por exemplo, uma função que
-possui `movimentos bruscos', em um escala minúscula. Ou ainda, caso se tenha
+possui ``movimentos bruscos'', em um escala minúscula. Ou ainda, caso se tenha
 considerado um ponto inicial muito distante de qualquer ótimo, resultando
 em um funcionamento extremamente custoso do algoritmo.
 
@@ -454,7 +452,7 @@ Cálculo, como nos métodos anteriormente apresentados, mas sim, de formas
 diferentes de analisar o problema, que por certos aspectos é simples. O método
 completo é constituído por operações em uma matriz específica, denominada
 Tableau, que representa o problema, o qual não é necessário ser apresentado
-aqui, por se distanciar da `família' de métodos de otimização que é nos
+aqui, por se distanciar da ``família'' de métodos de otimização que é nos
 interessa apresentar.
 
 
@@ -484,7 +482,7 @@ $f$. Que tem os seguintes parâmetros:
         \item A função $f$ tem como domínio um intervalo
             \(\mathbb{I} \subseteq \mathbb{R}\) e imagem um valor Real;
 
-        \item E uma entrada $x$ sendo como o `palpite' inicial do ótimo.
+        \item E uma entrada $x$ sendo como o ``palpite'' inicial do ótimo.
     \end{itemize}
 
 
